--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "KMS/alice2bob"]
-	path = KMS/alice2bob
+[submodule "src/alice2bob"]
+	path = src/alice2bob
 	url = git@github.com:drheli/qkd-net.git
